update the prayer time path to accept param
